# ropt-nomad

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: build-docs.yml  release.yml  static-checks.yml  tests.yml
0.20/: 404.html  index.html
0.20/search/: search_index.json
0.21/: 404.html  index.html
0.24/: 404.html
0.25/search/: search_index.json
0.26/search/: search_index.json
0.28/: index.html
0.28/search/: search_index.json
dev/: 404.html  index.html  objects.inv
dev/search/: search_index.json
docs/: index.md
docs/snippets/: nomad.md
examples/: discrete.py  rosenbrock.py
src/ropt_nomad/: __init__.py  nomad.py
tests/: conftest.py  test_doc.py  test_examples.py  test_nomad_backend.py
