[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ropt-nomad"
description = "A NOMAD backend for the ropt robust optimization package"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = ["PyNomadBBO", "ropt>=0.2.1"]

[project.optional-dependencies]
test = ["ruff", "mypy", "pytest"]

[project.entry-points."ropt.plugins.optimizer"]
nomad = "ropt_nomad.nomad:NomadOptimizer"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ropt_nomad"]

[tool.setuptools.package-data]
ropt_nomad = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "ropt_nomad.version.__version__" }

[tool.setuptools_scm]
write_to = "src/ropt_nomad/version.py"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    'ignore:.*Pydantic will allow any object with no validation since we cannot even enforce that the input is an instance of the given type.*:UserWarning'
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101",
    "ANN102",
    "AIR",
    "COM812",
    "COM819",
    "D",
    "D206",
    "DJ",
    "E501",
    "FA",
    "ISC001",
    "PGH",
    "UP",
    "ANN101",
    "ANN102",
    "FIX002",
    "S101",
    "T201",
    "TD002",
    "TD003",
    "Q",
    "UP",
    "W191",
]
exclude = ["examples", "nomad-*"]

[tool.ruff.format]
exclude = ["src/ropt_nomad/version.py", "build", "nomad-v.4.3.1"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "D", "ANN", "FBT", "PL", "PLR0913"]

[tool.mypy]
strict = true
ignore_missing_imports = true
plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = ["PyNomad.*"]
ignore_missing_imports = true
